# python-template

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  git-conventional-commits.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  template-README.md
.github/: main.yml  remove-rust.sh  rename_project.sh  setup-rust.sh  template_flag.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  docs.yaml  feature.md  feature.yaml
.github/scripts/: rename_project.sh
.github/workflows/: bootstrap.yml  ci.yml  format-check.yml  main.yml  preflight.yml  release.yml  rename_project.yml  tests.yml
crates/: .gitignore  Cargo.toml
crates/src/: lib.rs
crates/src/basic_functions/: basic_math.rs  basic_strings.rs  mod.rs
rustlib/: Cargo.toml
rustlib/src/: lib.rs
rustlib/src/basic_functions/: basic_math.rs  basic_string.rs  mod.rs
src/notebooks/: 01_main.ipynb  main.ipynb
src/package_name/: __init__.py
src/project_name/: __init__.py  main.py
src/sample/: main.py
src/tests/: electron_test.py
tests/: electron_test.py  test_sample.py
