[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{project_name}}"
description = "{{project_description}}"
version = "0.1.0"
authors = [{ name = "{{author_name}}" }]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "LovelyPlots",
    # "qiskit",
    # "qutip",
    # "weylchamber",
]

[project.optional-dependencies]
dev = ["ipykernel", "pylatexenc", "ipywidgets", "pre-commit"]
format = [
    "pre-commit",
    "ruff",
    # "black[jupyter]",
    # "tomli",
    # "docformatter[tomli]",
]
test = ["pytest"]

[tool.ruff]
target-version = "py311"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# select = ["E", "F", "I", "UP", "B", "D"]  # pycodestyle, pyflakes, isort, pyupgrade, bugbear, docstrings
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"


